fix some wrong color

--- a/common/static/sass/edx-pattern-library-shims/_buttons.scss
+++ b/common/static/sass/edx-pattern-library-shims/_buttons.scss
@@ -157,14 +157,14 @@
 .btn-brand {
   @extend .btn-primary;
 
-  background: darken(white, 5%);
-  border-color: darken(white, 5%);
+  // background: darken(white, 5%);
+  // border-color: darken(white, 5%);
 
-  &:hover,
-  &.is-hovered,
-  &:focus,
-  &.is-focused {
-    border-color: darken(white, 5%);
-    background-color: darken(white, 5%);
-  }
+  // &:hover,
+  // &.is-hovered,
+  // &:focus,
+  // &.is-focused {
+  //   border-color: darken(white, 5%);
+  //   background-color: darken(white, 5%);
+  // }
 }
